--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 * {
 	box-sizing: border-box;
@@ -12,7 +12,8 @@ html, body {
 body {
 	background: #fff;
   font-family: 'Inter', Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
   color: #000;
   margin: 0;
   padding: 0;
@@ -20,7 +21,7 @@ body {
 }
 	/* sets the base font size for the document; turns on kerning pairs and ligatures */
 
-body, ul, ol, dl {
+body, p, h1 {
 	margin: 0;
 }
 
@@ -32,13 +33,6 @@ main{
   justify-content: center;
 }
 
-#post-wrapper{
-  width: 100%;
-  max-width: 526px;
-  border: 1px solid #DEDEDE;
-  border-radius: 5px;
-}
-
 article, aside, audio,
 footer, header, nav, section, video {
 	display: block;
@@ -47,38 +41,10 @@ footer, header, nav, section, video {
 	/* ensures that older browsers will display HTML5 elements correctly */
 
 h1 {
-	font-size: 1.4rem;
-}
-	/* begins to set up font sizes relative to base rem – h1 has been used as an example */
-
-p {
-	-ms-word-break: break-all;
-	word-break: break-all;
-	word-break: break-word;
-	-moz-hyphens: auto;
-	-webkit-hyphens: auto;
-	-ms-hyphens: auto;
-	hyphens: auto;
-}
-	/* sets hyphenation by default on paragraphs */
-
-textarea {
-	resize: vertical;
+	font-size: 14px;
+  font-weight: 500;
 }
  /* changes textarea resizing from "both" (UA default) to vertical only */
-
-table { border-collapse: collapse; }
-td {
-	padding: .5rem;
-}
-	/* causes tables to actually look like tables */
-
-img {
-	border: none;
-	max-width: 100%;
-}
-	/* removes outlines from linked images (for older browsers and IE), sets up images for responsive design layout */
-
 input[type="submit"]::-moz-focus-inner,
 	input[type="button"]::-moz-focus-inner {
 		border : 0px;
@@ -100,10 +66,6 @@ input:required:after {
 	/* sets up required form fields with the conventional following red asterix */
 input[type="email"]:invalid {
 	background: #f00;
-}
-
-sub, sup {
-	line-height: 0;
 }
     /* sets superscript and subscript text so that it doesn't throw off leading for elements in which they are included */
 
@@ -136,4 +98,50 @@ sub, sup {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.user-wrapper{
+  display: flex;
+  padding: 15px 25px 10px;
+  align-items: center;
+}
+
+.user-wrapper img{
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+}
+
+.info-user-wrapper{
+  display: grid;
+  grid-gap: 8px;
+  margin-left: 25px;
+}
+
+.info-user-wrapper p{
+  font-size: 10px;
+}
+
+.post-details{
+  margin: 15px 25px 25px;
+}
+
+.user-reaction{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: fit-content;
+  grid-gap: 10px;
+  margin-bottom: 30px;
+}
+
+.user-reaction img{
+  cursor: pointer;
+}
+
+#post-wrapper{
+  width: 100%;
+  max-width: 526px;
+  border: 1px solid #DEDEDE;
+  background-color: #FCFCFC;
+  border-radius: 5px;
 }
