--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -129,13 +129,73 @@ input[type="email"]:invalid {
 .user-reaction{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 7px;
+  justify-items: center;
+  align-items: center;
   width: fit-content;
-  grid-gap: 10px;
   margin-bottom: 30px;
 }
 
 .user-reaction img{
   cursor: pointer;
+}
+
+.wrapper-heart-style{
+  display: flex;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0;
+  transform: scale(1.3);
+  padding: 0;
+}
+
+.heart{
+  fill: white;
+  stroke: black;
+  transform: scale(0.8);
+  transform-origin: center;
+}
+
+.heart-pulse {
+  fill: #ED4956;
+  stroke: #ED4956;
+  transform: scale(0.8);
+  transform-origin: center;
+  animation: pulse 1s linear;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.8);
+	}
+
+	10% {
+		transform: scale(0.9);
+	}
+
+	20% {
+		transform: scale(0.7);
+	}
+
+	30% {
+		transform: scale(1);
+	}
+
+	40% {
+		transform: scale(0.7);
+	}
+
+	50% {
+		transform: scale(0.85);
+	}
+
+	60% {
+		transform: scale(0.75);
+	}
+
+	70% {
+		transform: scale(0.8);
+	}
 }
 
 #post-wrapper{
