--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -33,6 +33,11 @@ main{
   justify-content: center;
 }
 
+section{
+  overflow-y: auto;
+  max-height: 220px;
+}
+
 article, aside, audio,
 footer, header, nav, section, video {
 	display: block;
@@ -68,6 +73,14 @@ input[type="email"]:invalid {
 	background: #f00;
 }
     /* sets superscript and subscript text so that it doesn't throw off leading for elements in which they are included */
+
+#post-wrapper{
+  width: 100%;
+  max-width: 526px;
+  border: 1px solid #DEDEDE;
+  background-color: #FCFCFC;
+  border-radius: 5px;
+}
 
 .swiper {
   width: 100%;
@@ -142,7 +155,6 @@ input[type="email"]:invalid {
 
 .wrapper-heart-style{
   display: flex;
-  cursor: pointer;
   background-color: transparent;
   border: 0;
   transform: scale(1.3);
@@ -150,6 +162,7 @@ input[type="email"]:invalid {
 }
 
 .heart{
+  cursor: pointer;
   fill: white;
   stroke: black;
   transform: scale(0.8);
@@ -157,6 +170,7 @@ input[type="email"]:invalid {
 }
 
 .heart-pulse {
+  cursor: pointer;
   fill: #ED4956;
   stroke: #ED4956;
   transform: scale(0.8);
@@ -198,10 +212,22 @@ input[type="email"]:invalid {
 	}
 }
 
-#post-wrapper{
-  width: 100%;
-  max-width: 526px;
-  border: 1px solid #DEDEDE;
-  background-color: #FCFCFC;
-  border-radius: 5px;
+::-webkit-scrollbar {
+  width: 5px;
+  margin-left: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
