--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -35,11 +35,11 @@ main{
 
 section{
   overflow-y: auto;
-  max-height: 220px;
+  max-height: 125px;
+  min-height: 70px;
 }
 
-article, aside, audio,
-footer, header, nav, section, video {
+footer, header, section {
 	display: block;
 	}
 
@@ -49,30 +49,6 @@ h1 {
 	font-size: 14px;
   font-weight: 500;
 }
- /* changes textarea resizing from "both" (UA default) to vertical only */
-input[type="submit"]::-moz-focus-inner,
-	input[type="button"]::-moz-focus-inner {
-		border : 0px;
-	}
-	/* removes the inner border effect from focused buttons for form elements in Firefox */
-
-input[type="search"] {
-	-webkit-appearance: textfield;
-}
-input[type="submit"] {
-	-webkit-appearance:none;
-}
-	/* removes the OS X appearance from HTML5 search inputs and submit buttons when viewed in Safari */
-
-input:required:after {
-	color: #f00;
-	content: " *";
-}
-	/* sets up required form fields with the conventional following red asterix */
-input[type="email"]:invalid {
-	background: #f00;
-}
-    /* sets superscript and subscript text so that it doesn't throw off leading for elements in which they are included */
 
 #post-wrapper{
   width: 100%;
@@ -177,6 +153,46 @@ input[type="email"]:invalid {
   transform-origin: center;
   animation: pulse 1s linear;
 }
+.comment-wrapper{
+  margin-bottom: 10px;
+}
+
+.post-description{
+  margin-bottom: 30px;
+}
+
+.footer-wrapper {
+  display: flex;
+  width: 100%;
+  margin-top: 15px;
+}
+
+.footer-wrapper input {
+  width: 100%;
+  border: 0;
+  background-color: #F1F1F1;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin: 0;
+  padding: 17px 15px;
+  font-size: 12px;
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
+  outline: none
+}
+
+
+.footer-wrapper button {
+  border: 0;
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  cursor: pointer;
+  color: #3D8AFF;
+  background-color: #F1F1F1;
+  padding-right: 15px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 
 @keyframes pulse {
 	0% {
